; ModuleID = '/home/carl/AnghaBench/kphp-kdb/pmemcached/extr_pmemcached-data.c_init_memory_bounds.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/pmemcached/extr_pmemcached-data.c_init_memory_bounds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MEMORY_FOR_METAFILES = common dso_local global i32 0, align 4
@max_memory = common dso_local global i32 0, align 4
@memory_for_metafiles = common dso_local global i64 0, align 8
@MIN_MEMORY_FOR_METAFILES = common dso_local global i64 0, align 8
@MEMORY_FOR_CACHE = common dso_local global i32 0, align 4
@memory_for_cache = common dso_local global i64 0, align 8
@MIN_MEMORY_FOR_CACHE = common dso_local global i64 0, align 8
@MEMORY_FOR_WILDCARD_CACHE = common dso_local global i32 0, align 4
@memory_for_wildcard_cache = common dso_local global i64 0, align 8
@MIN_MEMORY_FOR_WILDCARD_CACHE = common dso_local global i64 0, align 8
@MEMORY_RESERVED = common dso_local global i32 0, align 4
@init_memory = common dso_local global i64 0, align 8
@memory_for_entries = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_memory_bounds() #0 {
  %1 = load i32, i32* @MEMORY_FOR_METAFILES, align 4
  %2 = load i32, i32* @max_memory, align 4
  %3 = mul nsw i32 %1, %2
  %4 = sext i32 %3 to i64
  store i64 %4, i64* @memory_for_metafiles, align 8
  %5 = load i64, i64* @memory_for_metafiles, align 8
  %6 = load i64, i64* @MIN_MEMORY_FOR_METAFILES, align 8
  %7 = icmp slt i64 %5, %6
  br i1 %7, label %8, label %10

8:                                                ; preds = %0
  %9 = load i64, i64* @MIN_MEMORY_FOR_METAFILES, align 8
  store i64 %9, i64* @memory_for_metafiles, align 8
  br label %10

10:                                               ; preds = %8, %0
  %11 = load i32, i32* @MEMORY_FOR_CACHE, align 4
  %12 = load i32, i32* @max_memory, align 4
  %13 = mul nsw i32 %11, %12
  %14 = sext i32 %13 to i64
  store i64 %14, i64* @memory_for_cache, align 8
  %15 = load i64, i64* @memory_for_cache, align 8
  %16 = load i64, i64* @MIN_MEMORY_FOR_CACHE, align 8
  %17 = icmp slt i64 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %10
  %19 = load i64, i64* @MIN_MEMORY_FOR_CACHE, align 8
  store i64 %19, i64* @memory_for_cache, align 8
  br label %20

20:                                               ; preds = %18, %10
  %21 = load i32, i32* @MEMORY_FOR_WILDCARD_CACHE, align 4
  %22 = load i32, i32* @max_memory, align 4
  %23 = mul nsw i32 %21, %22
  %24 = sext i32 %23 to i64
  store i64 %24, i64* @memory_for_wildcard_cache, align 8
  %25 = load i64, i64* @memory_for_wildcard_cache, align 8
  %26 = load i64, i64* @MIN_MEMORY_FOR_WILDCARD_CACHE, align 8
  %27 = icmp slt i64 %25, %26
  br i1 %27, label %28, label %30

28:                                               ; preds = %20
  %29 = load i64, i64* @MIN_MEMORY_FOR_WILDCARD_CACHE, align 8
  store i64 %29, i64* @memory_for_wildcard_cache, align 8
  br label %30

30:                                               ; preds = %28, %20
  %31 = load i32, i32* @MEMORY_RESERVED, align 4
  %32 = sub nsw i32 1, %31
  %33 = load i32, i32* @max_memory, align 4
  %34 = mul nsw i32 %32, %33
  %35 = sext i32 %34 to i64
  %36 = load i64, i64* @memory_for_cache, align 8
  %37 = sub nsw i64 %35, %36
  %38 = load i64, i64* @memory_for_metafiles, align 8
  %39 = sub nsw i64 %37, %38
  %40 = load i64, i64* @init_memory, align 8
  %41 = sub nsw i64 %39, %40
  store i64 %41, i64* @memory_for_entries, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
